--- a/site/GovnopolyClient.html
+++ b/site/GovnopolyClient.html
@@ -3,9 +3,7 @@
     <title>Govnopoly</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
-    <style type="text/css">
-      .hidden { display: none; }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1 id="connection-error" class="hidden">Connection error to server...</h1>
@@ -17,5 +15,16 @@
     <input type="text" id="message" placeholder="Message"></input>
     <br/>
     <button id="roll-btn">Roll</button>
+    <div id="start-vote-pane">
+      <button id="start-vote-btn">Start Vote</button>
+      <button id="clear-vote-btn">Clear Vote</button>
+    </div>
+    <div id="vote-pane" class="disabled">
+      <button id="vote-yes-btn">Yes</button>
+      <button id="vote-no-btn">No</button>
+      <button id="vote-abstain-btn">Abstain</button>
+      <br/>
+      <button id="close-vote-btn">Close Vote</button>
+    </div>
   </body>
 </html>
